# conan-cmake-playground

./: README.md  build.py
projects/bulbasaur/: CMakeLists.txt  conanfile.py
projects/charmander/: CMakeLists.txt  conanfile.py
projects/charmander/include/: charmander.h
projects/pikachu/: CMakeLists.txt  conanfile.py
projects/squirtle/: CMakeLists.txt  conanfile.py  print_hello.cpp
